------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

April 1 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a small abusable bug in the monster AI
	* "Collected conversations of Ivan Gorovits and the Leader of Citizens" added
	  to Doc/Data

March 31 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Severed bodyparts of humans look again correct
	* The dificulty penalty for being invisible is now insane
	* Wishing invisiblity-confering items is again allowed
	* Reduced the penalty for eating frog flesh (it was worse than committing
	  suicide)
	* Bunny, large bunny and Vladimir (Vile Lurking Agressive Devourer with Infernal
	  Muscles Intended to Rampage) the gigantic carnivorous mutant bunny added to
	  char.pcx by Kahvi
	* The game now compiles correctly on gcc 2.952 without special switches

March 31 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Gauntlet armor pictures are again shown correctly

March 31 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* State data has been structuralized to make it more readable
	* Magical vapour no longer activates lycanthropy, I think

March 30 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a bug in the banana growers' former profession system
	* Fixed the "Overgrowth of square population!" error of Attnam
	* Corrected a minor bug in the wand of door creation and earthquake codes
	* Destroying or polymorphing items or using a wand of door creation in shops and
	  in the Cathedral is now prohibited
	* Kicking shop doors doesn't make shopkeepers mad anymore if you don't actually
	  damage them
	* Polymorphing the altar in Attnam no longer changes the divine owner of the
	  whole Cathedral and make the priest say "Not currently implemented."