@@ -148,5 +148,5 @@ Does using a two-handed weapon yield exp to only one arm?
 //(might be a feature... But probably isn't even thought Timo may say so) Merka the shopkeeper walking around in the dungeon. 
 //Dark wizards are too hard.
 //TOO MANY KAMIKAZE DWARFS.
-"XXXX, killed by a werewolf polymorphed into a werewolf"
-Go-command shouldn't walk to squares with smoke.
+//"XXXX, killed by a werewolf polymorphed into a werewolf"
+//Go-command shouldn't walk to squares with smoke.
